# mcp-surf-forecast

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt  server.py  surf_school.db
.cursor/: mcp.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml
api/: __init__.py  geocoding.py  marine.py  weather.py
backend/: context.py  crud.py  database.py  main.py  models.py  router.py  schemas.py
frontend/: app.py
models/: __init__.py  data_quality.py
services/: forecast.py  helpers.py
tests/: test_forecast.py
